Cp/qic phys (#3220)
Uploading content for Qiskit in Classroom set 1: quantum mechanics. Not
yet ready for review. Starting PR to getting better linting error
feedback. Can't parse what I'm getting on my machine.

---------

Co-authored-by: ABBY CROSS <across@us.ibm.com>
Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -715,7 +715,17 @@ notifications:
   "learning/courses/basics-of-quantum-information/entanglement-in-action/superdense-coding":
     - "@jhwatrous"
   "learning/courses/basics-of-quantum-information/entanglement-in-action/chsh-game":
-    - "@jhwatrous"
+    - "@John-Watrous"
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/index":
+    - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/superposition-with-qiskit":
+    - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit":
+    - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit":
+    - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit":
+    - "@christopherporter1"
   "learning/courses/fundamentals-of-quantum-algorithms/index":
     - "@jhwatrous"
   "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction":
