Uploading qchem with VQE

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -824,3 +824,19 @@ notifications:
     - "@jhwatrous"
   "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem":
     - "@jhwatrous"
+  "learning/courses/quantum-chem-with-vqe/hamiltonian-construction":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/ansatz":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/classical-optimizers":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/ground-state":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/geometry":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/index":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/exam":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/introduction":
+    - "@christopherporter1"
