added files to notebook checker

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -289,4 +289,10 @@ notebooks = [
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/approach-to-fault-tolerance.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/controlling-error-propagation.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem.ipynb",
+    "learning/courses/quantum-chem-with-vqe/introduction.ipynb",
+    "learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb",
+    "learning/courses/quantum-chem-with-vqe/ansatz.ipynb",
+    "learning/courses/quantum-chem-with-vqe/classical-optimizers.ipynb",
+    "learning/courses/quantum-chem-with-vqe/ground-state.ipynb",
+    "learning/courses/quantum-chem-with-vqe/geometry.ipynb",
 ]
