--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -864,3 +864,12 @@ notifications:
     - "@christopherporter1"
   "learning/courses/utility-scale-quantum-computing/lesson-14-utility-iii":
     - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-computer-science/deutsch-jozsa":
+    - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-computer-science/index":
+    - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-computer-science/quantum-key-distribution":
+    - "@christopherporter1"
+  "learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation":
+    - "@christopherporter1"
+
