Sophy/Qiskit-in-the-Classroom

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -274,6 +274,9 @@ notebooks = [
     "learning/courses/qiskit-in-classrooms-quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb",
     "learning/courses/qiskit-in-classrooms-quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb",
     "learning/courses/qiskit-in-classrooms-quantum-mechanics/bells-inequality-with-qiskit.ipynb",
+    "learning/courses/qiskit-in-classrooms-computer-science/deutsch-jozsa.ipynb",
+    "learning/courses/qiskit-in-classrooms-computer-science/quantum-key-distribution.ipynb",
+    "learning/courses/qiskit-in-classrooms-computer-science/quantum-teleportation.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/introduction.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/repetition-codes.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/shor-code.ipynb",
