--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -290,4 +290,12 @@ notebooks = [
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/approach-to-fault-tolerance.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/controlling-error-propagation.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem.ipynb",
+    "learning/courses/variational-algorithm-design/variational-algorithms.ipynb",
+    "learning/courses/variational-algorithm-design/reference-states.ipynb",
+    "learning/courses/variational-algorithm-design/ansaetze-and-variational-forms.ipynb",
+    "learning/courses/variational-algorithm-design/cost-functions.ipynb",
+    "learning/courses/variational-algorithm-design/optimization-loops.ipynb",
+    "learning/courses/variational-algorithm-design/examples-and-applications.ipynb",
+    "learning/courses/variational-algorithm-design/instances-and-extensions.ipynb",
+
 ]
