Quantum Safe PR
It returns 108 dictionary issue with one single file: learning/courses/practical-introduction-to-quantum-safe-cryptography/works-cited

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -836,3 +836,19 @@ notifications:
     - "@jhwatrous"
   "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem":
     - "@jhwatrous"
+  "learning/courses/practical-introduction-to-quantum-safe-cryptography/asymmetric-key-cryptography":
+    - "@christopherporter1"
+  "learning/courses/practical-introduction-to-quantum-safe-cryptography/cryptographic-hash-functions":
+    - "@christopherporter1"
+  "learning/courses/practical-introduction-to-quantum-safe-cryptography/index":
+    - "@christopherporter1"
+  "learning/courses/practical-introduction-to-quantum-safe-cryptography/introduction-to-this-course":
+    - "@christopherporter1"
+  "learning/courses/practical-introduction-to-quantum-safe-cryptography/quantum-safe-cryptography":
+    - "@christopherporter1"
+  "learning/courses/practical-introduction-to-quantum-safe-cryptography/symmetric-key-cryptography":
+    - "@christopherporter1"
+  "learning/courses/practical-introduction-to-quantum-safe-cryptography/whats-next":
+    - "@christopherporter1"
+  "learning/courses/practical-introduction-to-quantum-safe-cryptography/works-cited":
+    - "@christopherporter1"
