--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -290,4 +290,9 @@ notebooks = [
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/approach-to-fault-tolerance.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/controlling-error-propagation.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem.ipynb",
+    "learning/courses/practical-introduction-to-quantum-safe-cryptography/cryptographic-hash-functions.ipynb",
+    "learning/courses/practical-introduction-to-quantum-safe-cryptography/quantum-safe-cryptography.ipynb",
+    "learning/courses/practical-introduction-to-quantum-safe-cryptography/symmetric-key-cryptography.ipynb",
+    "learning/courses/practical-introduction-to-quantum-safe-cryptography/WhatNext.ipynb",
+    "learning/courses/practical-introduction-to-quantum-safe-cryptography/asymmetric-key-cryptography.ipynb"
 ]
