--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -836,3 +836,5 @@ notifications:
     - "@jhwatrous"
   "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem":
     - "@jhwatrous"
+  "learning/courses/quantum-diagonalization-algorithms/exam":
+    - "@christopherporter1"
