New branch to push QBF exam page.

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -676,6 +676,8 @@ notifications:
     - "@christopherporter1"
   "learning/courses/quantum-business-foundations/quantum-computing-fundamentals":
     - "@christopherporter1"
+  "learning/courses/quantum-business-foundations/exam":
+    - "@christopherporter1"
   "learning/courses/quantum-machine-learning/classical-ml-review":
     - "@christopherporter1"
   "learning/courses/quantum-machine-learning/data-encoding":
