--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -732,16 +732,22 @@ notifications:
     - "@christopherporter1"
   "learning/courses/fundamentals-of-quantum-algorithms/index":
     - "@jhwatrous"
+    - "@christopherporter1"
   "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction":
     - "@jhwatrous"
+    - "@christopherporter1"
   "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/query-model-of-computation":
     - "@jhwatrous"
+    - "@christopherporter1"
   "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-algorithm":
     - "@jhwatrous"
+    - "@christopherporter1"
   "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/deutsch-jozsa-algorithm":
     - "@jhwatrous"
+    - "@christopherporter1"
   "learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/simon-algorithm":
     - "@jhwatrous"
+    - "@christopherporter1"
   "learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/introduction":
     - "@jhwatrous"
   "learning/courses/fundamentals-of-quantum-algorithms/quantum-algorithmic-foundations/factoring-and-gcd":
