--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -688,6 +688,8 @@ notifications:
     - "@christopherporter1"
   "learning/courses/quantum-machine-learning/index":
     - "@christopherporter1"
+  "learning/courses/quantum-machine-learning/exam":
+    - "@christopherporter1"
   "learning/courses/basics-of-quantum-information/index":
     - "@jhwatrous"
   "learning/courses/basics-of-quantum-information/single-systems/introduction":
