--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -44,6 +44,8 @@ notifications:
     - "`@nbronn`"
     - "@beckykd"
     - "`@mtreinish`"
+  "docs/guides/composer":
+    - "@abbycross"
   "docs/guides/configure-error-mitigation":
     - "@jyu00"
     - "@beckykd"
