--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -246,6 +246,9 @@ notifications:
   "docs/guides/quickstart-steps-org":
     - "@abbycross"
     - "@beckykd"
+  "docs/guides/logging":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/serverless":
     - "@jenglick"
     - "@pandasa123"
