--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -776,6 +776,9 @@ notifications:
     - "@jhwatrous"
   "learning/courses/fundamentals-of-quantum-algorithms/grover-algorithm/concluding-remarks":
     - "@jhwatrous"
+  "learning/courses/fundamentals-of-quantum-algorithms/exam":
+    - "@jhwatrous"
+    - "@christopherporter1"
   "learning/courses/general-formulation-of-quantum-information/index":
     - "@jhwatrous"
   "learning/courses/general-formulation-of-quantum-information/density-matrices/introduction":
