Cp/qchem-vqe2 (#3296)
Really screwed up something in version control on the last branch.
Trying again to push the vqe course.

---------

Co-authored-by: ABBY CROSS <across@us.ibm.com>
Co-authored-by: Frank Harkins <frankharkins@hotmail.co.uk>
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -846,6 +846,21 @@ notifications:
     - "@jhwatrous"
   "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem":
     - "@jhwatrous"
+  "learning/courses/quantum-chem-with-vqe/index":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/introduction":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/hamiltonian-construction":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/ansatz":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/classical-optimizers2":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/ground-state":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/geometry":
+    - "@christopherporter1"
+  "learning/courses/quantum-chem-with-vqe/exam":
   "learning/courses/variational-algorithm-design/index":
     - "@christopherporter1"
   "learning/courses/variational-algorithm-design/variational-algorithms":
