--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -290,6 +290,12 @@ notebooks = [
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/approach-to-fault-tolerance.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/controlling-error-propagation.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem.ipynb",
+    "learning/courses/quantum-chem-with-vqe/introduction.ipynb",
+    "learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb",
+    "learning/courses/quantum-chem-with-vqe/ansatz.ipynb",
+    "learning/courses/quantum-chem-with-vqe/classical-optimizers2.ipynb",
+    "learning/courses/quantum-chem-with-vqe/ground-state.ipynb",
+    "learning/courses/quantum-chem-with-vqe/geometry.ipynb",
     "learning/courses/variational-algorithm-design/variational-algorithms.ipynb",
     "learning/courses/variational-algorithm-design/reference-states.ipynb",
     "learning/courses/variational-algorithm-design/ansaetze-and-variational-forms.ipynb",
