--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -294,7 +294,7 @@ notebooks = [
     "learning/courses/practical-introduction-to-quantum-safe-cryptography/quantum-safe-cryptography.ipynb",
     "learning/courses/practical-introduction-to-quantum-safe-cryptography/symmetric-key-cryptography.ipynb",
     "learning/courses/practical-introduction-to-quantum-safe-cryptography/WhatNext.ipynb",
-    "learning/courses/practical-introduction-to-quantum-safe-cryptography/asymmetric-key-cryptography.ipynb"
+    "learning/courses/practical-introduction-to-quantum-safe-cryptography/asymmetric-key-cryptography.ipynb",
     "learning/courses/variational-algorithm-design/variational-algorithms.ipynb",
     "learning/courses/variational-algorithm-design/reference-states.ipynb",
     "learning/courses/variational-algorithm-design/ansaetze-and-variational-forms.ipynb",
