exam page and link added

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -862,6 +862,8 @@ notifications:
     - "@christopherporter1"
   "learning/courses/practical-introduction-to-quantum-safe-cryptography/works-cited":
     - "@christopherporter1"
+  "learning/courses/practical-introduction-to-quantum-safe-cryptography/exam":
+    - "@christopherporter1"
   "learning/courses/quantum-chem-with-vqe/index":
     - "@christopherporter1"
   "learning/courses/quantum-chem-with-vqe/introduction":
