Sophy/Qiskit-in-the-Classroom Course - Module: computer science (#3304)
Co-authored-by: Soyoung Shin <63990199+0sophy1@users.noreply.github.com>

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -270,6 +270,9 @@ notebooks = [
     "learning/courses/quantum-business-foundations/exam.ipynb",
     "learning/courses/quantum-business-foundations/how-to-become-quantum-ready.ipynb",
     "learning/courses/quantum-business-foundations/quantum-computing-fundamentals.ipynb",
+    "learning/modules/computer-science/deutsch-jozsa.ipynb",
+    "learning/modules/computer-science/quantum-key-distribution.ipynb",
+    "learning/modules/computer-science/quantum-teleportation.ipynb",
     "learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb",
     "learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb",
     "learning/modules/quantum-mechanics/exploring-uncertainty-with-qiskit.ipynb",
