--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -846,6 +846,13 @@ notifications:
     - "@jhwatrous"
   "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem":
     - "@jhwatrous"
+  "learning/modules/computer-science/deutsch-jozsa":
+    - "@christopherporter1"
+  "learning/modules/computer-science/index":
+    - "@christopherporter1"
+  "learning/modules/computer-science/quantum-key-distribution":
+    - "@christopherporter1"
+  "learning/modules/computer-science/quantum-teleportation":
   "learning/courses/quantum-chem-with-vqe/index":
     - "@christopherporter1"
   "learning/courses/quantum-chem-with-vqe/introduction":
