--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -871,6 +871,7 @@ notifications:
   "learning/courses/quantum-safe-cryptography/works-cited":
     - "@christopherporter1"
   "learning/courses/quantum-safe-cryptography/exam":
+    - "@christopherporter1"
   "learning/modules/computer-science/deutsch-jozsa":
     - "@christopherporter1"
   "learning/modules/computer-science/index":
