Sophy / Quantum Safe PR (#3303)
It returns 108 dictionary issue with one single file:
learning/courses/practical-introduction-to-quantum-safe-cryptography/works-cited

Q: Can we add ignore path for this?

---------

Co-authored-by: abbycross <across@us.ibm.com>
Co-authored-by: Arnau Casau I Playa <arnau.casau@ibm.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -854,6 +854,24 @@ notifications:
     - "@jhwatrous"
   "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem":
     - "@jhwatrous"
+  "learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography":
+    - "@christopherporter1"
+  "learning/courses/quantum-safe-cryptography/cryptographic-hash-functions":
+    - "@christopherporter1"
+  "learning/courses/quantum-safe-cryptography/index":
+    - "@christopherporter1"
+  "learning/courses/quantum-safe-cryptography/introduction-to-this-course":
+    - "@christopherporter1"
+  "learning/courses/quantum-safe-cryptography/quantum-safe-cryptography":
+    - "@christopherporter1"
+  "learning/courses/quantum-safe-cryptography/symmetric-key-cryptography":
+    - "@christopherporter1"
+  "learning/courses/quantum-safe-cryptography/whats-next":
+    - "@christopherporter1"
+  "learning/courses/quantum-safe-cryptography/works-cited":
+    - "@christopherporter1"
+  "learning/courses/quantum-safe-cryptography/exam":
+    - "@christopherporter1"
   "learning/modules/computer-science/deutsch-jozsa":
     - "@christopherporter1"
   "learning/modules/computer-science/index":
