--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -293,6 +293,11 @@ notebooks = [
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/approach-to-fault-tolerance.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/controlling-error-propagation.ipynb",
     "learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem.ipynb",
+    "learning/courses/quantum-safe-cryptography/cryptographic-hash-functions.ipynb",
+    "learning/courses/quantum-safe-cryptography/quantum-safe-cryptography.ipynb",
+    "learning/courses/quantum-safe-cryptography/symmetric-key-cryptography.ipynb",
+    "learning/courses/quantum-safe-cryptography/WhatNext.ipynb",
+    "learning/courses/quantum-safe-cryptography/asymmetric-key-cryptography.ipynb",
     "learning/courses/quantum-chem-with-vqe/introduction.ipynb",
     "learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb",
     "learning/courses/quantum-chem-with-vqe/ansatz.ipynb",
