--- a/.github/workflows/notebook-test-extended.yml
+++ b/.github/workflows/notebook-test-extended.yml
@@ -31,8 +31,8 @@ jobs:
       - name: Setup environment
         uses: ./.github/actions/set-up-notebook-testing
         with:
-          ibm-quantum-token: ${{ secrets.IBM_QUANTUM_TEST_TOKEN }}
-          instance: "client-enablement/documentation/qiskit-documenta"
+          ibm-cloud-token: ${{ secrets.IBM_CLOUD_TEST_TOKEN }}
+          instance: ${{ vars.IBM_CLOUD_TEST_CRN }}
           install-linux-deps: true
 
       - name: Execute notebooks
