--- a/.github/actions/set-up-notebook-testing/action.yml
+++ b/.github/actions/set-up-notebook-testing/action.yml
@@ -16,13 +16,12 @@ inputs:
   install-linux-deps:
     description: Whether to install extra dependencies
     default: "false"
-  ibm-quantum-token:
-    default: ""
+  ibm-cloud-token:
+    description: "Token for quantum.cloud.ibm.com"
+    required: true
   instance:
-    # We usually only want the same access as an open user, but occasionally we
-    # need higher priority to test notebooks that submit jobs in reasonable
-    # time
-    default: "ibm-q/open/main"
+    description: "CRN for quantum.cloud.ibm.com"
+    required: true
 runs:
   using: "composite"
   steps:
@@ -35,14 +34,13 @@ runs:
       run: pip install tox qiskit-ibm-runtime
 
     - name: Save IBM Quantum account
-      if: ${{ inputs.ibm-quantum-token != '' }}
       shell: python
       run: |
         from qiskit_ibm_runtime import QiskitRuntimeService
         QiskitRuntimeService.save_account(
-            channel="ibm_quantum",
+            channel="ibm_cloud",
             instance="${{ inputs.instance }}",
-            token="${{ inputs.ibm-quantum-token }}",
+            token="${{ inputs.ibm-cloud-token }}",
             set_as_default=True
         )
 
