--- a/.github/workflows/notebook-test.yml
+++ b/.github/workflows/notebook-test.yml
@@ -65,7 +65,8 @@ jobs:
           # Install Linux deps if the specific guides were changed, or
           # if all files are being tested.
           install-linux-deps: ${{ steps.check-deps.outputs.NEEDS_EXTRA_DEPS }}
-          ibm-quantum-token: ${{ secrets.IBM_QUANTUM_TEST_TOKEN }}
+          ibm-cloud-token: ${{ secrets.IBM_CLOUD_TEST_TOKEN }}
+          instance: ${{ vars.IBM_CLOUD_TEST_CRN }}
 
       - name: Execute notebooks
         env:
