--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ deps =
   -e scripts/nb-tester
   -r scripts/nb-tester/requirements.txt
 setenv = PYDEVD_DISABLE_FILE_VALIDATION=1
-commands = test-docs-notebooks {posargs} --check-pending-deprecations --config-path scripts/config/notebook-testing.toml
+commands = test-docs-notebooks {posargs} --check-pending-deprecations --config-path scripts/config/notebook-testing.toml --map-open-backends-to-internal
 
 [testenv:{lint,fix}]
 deps =
