add empty stretch file

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -37,6 +37,9 @@ notifications:
   "docs/guides/classical-feedforward-and-control-flow":
     - "`@kevinsung`"
     - "`@jakelishman`"
+  "docs/guides/stretch":
+    - "`@miamico`"
+    - "`@jakelishman`"
   "docs/guides/cloud-setup":
     - "@beckykd"
     - "@abbycross"
