Add SKQD tutorial (#3002)
Fixes #3003

---------

Co-authored-by: Jen Glick <41485571+jenglick@users.noreply.github.com>
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>
Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -602,6 +602,9 @@ notifications:
     - "@RitajitMajumdar"
   "docs/tutorials/sample-based-quantum-diagonalization":
     - "@miamico"
+    - "`@kevinsung`"
+  "docs/tutorials/sample-based-krylov-quantum-diagonalization":
+    - "@miamico"
     - "@kevinsung"
   "docs/tutorials/krylov-quantum-diagonalization":
     - "@miamico"
