--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -179,6 +179,7 @@ notebooks = [
     "docs/tutorials/variational-quantum-eigensolver.ipynb",
     "docs/tutorials/qunova-hivqe.ipynb",
     "docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb",
+    "docs/tutorials/sample-based-krylov-quantum-diagonalization.ipynb",
     "docs/tutorials/compute-dissociation-curves-for-strong-coupling-systems-with-quna-sys-qsci.ipynb",
     "docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb",
     "docs/tutorials/chsh-inequality.ipynb",
