--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "check:qiskit-bot": "tsx scripts/js/commands/checkQiskitBotFiles.ts",
     "check:stale-images": "tsx scripts/js/commands/checkStaleImages.ts",
     "check:new-pills": "tsx scripts/js/commands/checkNewPills.ts",
+    "check:katex-render": "tsx scripts/js/commands/checkKatexRender.ts",
     "regen-apis": "tsx scripts/js/commands/api/regenerateApiDocs.ts",
     "gen-api": "tsx scripts/js/commands/api/updateApiDocs.ts",
     "generate-historical-redirects": "tsx scripts/js/commands/api/generateHistoricalRedirects.ts",
