--- a/.github/actions/set-up-notebook-testing/action.yml
+++ b/.github/actions/set-up-notebook-testing/action.yml
@@ -37,12 +37,22 @@ runs:
       shell: python
       run: |
         from qiskit_ibm_runtime import QiskitRuntimeService
-        QiskitRuntimeService.save_account(
-            channel="ibm_cloud",
-            instance="${{ inputs.instance }}",
-            token="${{ inputs.ibm-cloud-token }}",
-            set_as_default=True
-        )
+        from qiskit_ibm_runtime.accounts.exceptions import InvalidAccountError
+
+        try:
+          QiskitRuntimeService.save_account(
+              channel="ibm_cloud",
+              instance="${{ inputs.instance }}",
+              token="${{ inputs.ibm-cloud-token }}",
+              set_as_default=True
+          )
+        except InvalidAccountError as err:
+          print(
+            "There was a problem setting up your account, this can happen if you're "
+            "making a PR from a fork. We will ignore this for now as not all "
+            "notebooks need a valid account to run.\n\nHere is the error:\n"
+          )
+          print(err)
 
     - name: Install Linux dependencies
       if: ${{ inputs.install-linux-deps == 'true' }}
