--- a/.github/actions/set-up-notebook-testing/action.yml
+++ b/.github/actions/set-up-notebook-testing/action.yml
@@ -37,22 +37,20 @@ runs:
       shell: python
       run: |
         from qiskit_ibm_runtime import QiskitRuntimeService
-        from qiskit_ibm_runtime.accounts.exceptions import InvalidAccountError
 
-        try:
+        if "${{ inputs.ibm-cloud-token }}" == "":
+          print(
+            "Token is an empty string, this can happen when making a PR from a "
+            "fork. We will continue without setting up the account as not all "
+            "notebooks need a valid account to run."
+          )
+        else:
           QiskitRuntimeService.save_account(
               channel="ibm_cloud",
               instance="${{ inputs.instance }}",
               token="${{ inputs.ibm-cloud-token }}",
               set_as_default=True
           )
-        except InvalidAccountError as err:
-          print(
-            "There was a problem setting up your account, this can happen if you're "
-            "making a PR from a fork. We will ignore this for now as not all "
-            "notebooks need a valid account to run.\n\nHere is the error:\n"
-          )
-          print(err)
 
     - name: Install Linux dependencies
       if: ${{ inputs.install-linux-deps == 'true' }}
