[nb-tester]: Handle forks better (#3409)
Previously, `save_account` would happily accept an empty string for the
`token`, but this seems to have changed. Since some notebooks can be
tested without a valid account, this PR adds a try/except to continue
even if account setup fails. The existing script will give an
appropriate error message if any notebooks fail on a fork.

--- a/.github/actions/set-up-notebook-testing/action.yml
+++ b/.github/actions/set-up-notebook-testing/action.yml
@@ -37,12 +37,20 @@ runs:
       shell: python
       run: |
         from qiskit_ibm_runtime import QiskitRuntimeService
-        QiskitRuntimeService.save_account(
-            channel="ibm_cloud",
-            instance="${{ inputs.instance }}",
-            token="${{ inputs.ibm-cloud-token }}",
-            set_as_default=True
-        )
+
+        if "${{ inputs.ibm-cloud-token }}" == "":
+          print(
+            "Token is an empty string, this can happen when making a PR from a "
+            "fork. We will continue without setting up the account as not all "
+            "notebooks need a valid account to run."
+          )
+        else:
+          QiskitRuntimeService.save_account(
+              channel="ibm_cloud",
+              instance="${{ inputs.instance }}",
+              token="${{ inputs.ibm-cloud-token }}",
+              set_as_default=True
+          )
 
     - name: Install Linux dependencies
       if: ${{ inputs.install-linux-deps == 'true' }}
