Remove broken notebook and add fixed one

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -38,7 +38,6 @@ notebooks = [
     "docs/guides/specify-observables-pauli.ipynb",
     "docs/guides/transpile-with-pass-managers.ipynb",
     "docs/guides/transpiler-plugins.ipynb",
-    "docs/guides/transpiler-stages.ipynb",
     "docs/guides/visualize-circuits.ipynb",
     "docs/guides/qiskit-addons-cutting-wires.ipynb",
     "docs/guides/qiskit-addons-utils.ipynb",
@@ -54,6 +53,7 @@ notebooks = [
     "docs/guides/native-gates.ipynb",
     "docs/guides/primitives-rest-api.ipynb",
     "docs/guides/repetition-rate-execution.ipynb",
+    "docs/guides/save-jobs.ipynb",
     "docs/guides/simulate-with-qiskit-sdk-primitives.ipynb",
     "docs/guides/synthesize-unitary-operators.ipynb",
     "docs/guides/DAG-representation.ipynb",
@@ -138,8 +138,8 @@ notebooks = [
 # Don't ever test the following notebooks
 [groups.exclude]
 notebooks = [
-    # TODO: See if this works again after migrating to cloud
-    "docs/guides/save-jobs.ipynb",
+    # TODO: Fix this (https://github.com/Qiskit/documentation/issues/3413)
+    "docs/guides/transpiler-stages.ipynb",
 
     # This notebook contains undefined variables so can't run at all.
     "docs/guides/function-template-hamiltonian-simulation.ipynb",
