--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -167,6 +167,7 @@ notebooks = [
 
 
     # We never run tutorials notebooks
+    "docs/tutorials/multi-product-formula.ipynb",
     "docs/tutorials/advanced-techniques-for-qaoa.ipynb",
     "docs/tutorials/ai-transpiler-introduction.ipynb",
     "docs/tutorials/circuit-transpilation-settings.ipynb",
