adds MPF tutorial (#3331)
Adds multiproduct formula tutorial

---------

Co-authored-by: Eric Arellano <14852634+Eric-Arellano@users.noreply.github.com>
Co-authored-by: abbycross <across@us.ibm.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -641,6 +641,9 @@ notifications:
     - "Henri-ColibrITD"
   "docs/tutorials/chsh-inequality":
     - "@miamico"
+  "docs/tutorials/multi-product-formula":
+    - "@miamico"
+    - "@jenglick"
   "learning/courses/quantum-computing-in-practice/introduction":
     - "@livlanes"
   "learning/courses/quantum-computing-in-practice/running-quantum-circuits":
