update users for Q-CTRL documentation

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -454,7 +454,7 @@ notifications:
     - "@kaelynj"
     - "@abbycross"
     - "@pandasa123"
-    - "@jrowenwu"
+    - "@tatiana5k"
     - "@dcanuto"
     - "@ThomasMerkh"
     - "@alexshih"
@@ -463,7 +463,7 @@ notifications:
     - "@kaelynj"
     - "@abbycross"
     - "@pandasa123"
-    - "@jrowenwu"
+    - "@tatiana5k"
     - "@dcanuto"
     - "@ThomasMerkh"
     - "@alexshih"
