move hello world and all assoc links

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -115,7 +115,7 @@ notifications:
   "docs/guides/get-started-with-primitives":
     - "@ElePT"
     - "@jyu00"
-  "docs/guides/hello-world":
+  "docs/tutorials/hello-world":
     - "@javabster"
   "docs/guides/index":
     - "@javabster"
