--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y imagemagick
           sudo ln -s /usr/bin/convert /usr/bin/magick
+      - name: Install Playwright
+        run: npx playwright install
 
       - name: File metadata
         run: npm run check:metadata
@@ -76,6 +78,10 @@ jobs:
         if: steps.all-changed-files.outputs.any_changed == 'true'
         run: |
           npm run check:pages-render -- --from-file .github/outputs/all_changed_files.txt
+      - name: Check that Katex expressions render (cloud app)
+        if: steps.all-changed-files.outputs.any_changed == 'true'
+        run: |
+          npm run check:katex-render -- --from-file .github/outputs/all_changed_files.txt
       - name: Stop Docker preview (cloud app)
         if: steps.all-changed-files.outputs.any_changed == 'true'
         run: docker ps -q | xargs docker stop
