Make second file

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -40,6 +40,9 @@ notifications:
   "docs/guides/cloud-setup":
     - "@beckykd"
     - "@abbycross"
+  "docs/guides/cloud-setup-invited":
+    - "@beckykd"
+    - "@abbycross"
   "docs/guides/common-parameters":
     - "`@nbronn`"
     - "@beckykd"
