add tutorial for edc

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -627,6 +627,9 @@ notifications:
   "docs/tutorials/multi-product-formula":
     - "@miamico"
     - "@jenglick"
+  "docs/tutorials/edc-cut-bell-pair-benchmarking":
+    - "@miamico"
+    - "@jyu00"
   "learning/courses/quantum-computing-in-practice/introduction":
     - "@livlanes"
   "learning/courses/quantum-computing-in-practice/running-quantum-circuits":
