Add new function templates dropdown

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -515,6 +515,8 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-code-assistant-openai-api":
     - "@cbjuan"
+  "docs/guides/qiskit-function-templates":
+    - "@kaelynj"
   "docs/tutorials/index":
     - "@miamico"
   "docs/tutorials/_toc":
