--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -193,6 +193,7 @@ notebooks = [
     "docs/tutorials/nishimori-phase-transition.ipynb",
     "docs/tutorials/global-data-quantum-optimizer.ipynb",
     "docs/tutorials/colibritd-pde.ipynb",
+    "docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb",
 
     # Don't test any learning notebooks
     "learning/courses/quantum-computing-in-practice/introduction.ipynb",
