--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -43,6 +43,13 @@ notifications:
   "docs/guides/cloud-setup-invited":
     - "@beckykd"
     - "@abbycross"
+  "docs/guides/cloud-setup-untrusted":
+    - "@beckykd"
+    - "@abbycross"
+  "docs/guides/cloud-setup-rest-api":
+    - "@beckykd"
+    - "@abbycross"
+
   "docs/guides/common-parameters":
     - "`@nbronn`"
     - "@beckykd"
