Add chemistry workflow template and make edits to other pages

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -517,6 +517,8 @@ notifications:
     - "@cbjuan"
   "docs/guides/qiskit-function-templates":
     - "@kaelynj"
+  "docs/guides/function-template-chemistry-workflow":
+    - "@kaelynj"
   "docs/tutorials/index":
     - "@miamico"
   "docs/tutorials/_toc":
