--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -137,6 +137,7 @@ notebooks = [
 notebooks = [
     # This notebook contains undefined variables so can't run at all.
     "docs/guides/function-template-hamiltonian-simulation.ipynb",
+    "docs/guides/function-template-chemistry-workflow.ipynb",
 
     # These notebooks are failing with auth errors and need investigating
     "docs/guides/serverless-first-program.ipynb",
