--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -511,6 +511,10 @@ notifications:
     - "@kaelynj"
   "docs/guides/qiskit-code-assistant-openai-api":
     - "@cbjuan"
+  "docs/guides/qiskit-function-templates":
+    - "@kaelynj"
+  "docs/guides/function-template-chemistry-workflow":
+    - "@kaelynj"
   "docs/tutorials/index":
     - "@miamico"
   "docs/tutorials/_toc":
