--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -40,6 +40,16 @@ notifications:
   "docs/guides/cloud-setup":
     - "@beckykd"
     - "@abbycross"
+  "docs/guides/cloud-setup-invited":
+    - "@beckykd"
+    - "@abbycross"
+  "docs/guides/cloud-setup-untrusted":
+    - "@beckykd"
+    - "@abbycross"
+  "docs/guides/cloud-setup-rest-api":
+    - "@beckykd"
+    - "@abbycross"
+
   "docs/guides/common-parameters":
     - "`@nbronn`"
     - "@beckykd"
