Always run notebook normalization in cron job

--- a/.github/workflows/notebook-test-cron.yml
+++ b/.github/workflows/notebook-test-cron.yml
@@ -35,6 +35,7 @@ jobs:
         run: tox -- --write --test-strategy hardware
 
       - name: Normalize notebooks
+        if: "!cancelled()"
         run: tox -e fix
 
       - name: Detect changed notebooks
