--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -24,7 +24,6 @@ notifications:
   "docs/guides/build-noise-models":
     - "`@kevinsung`"
   "docs/guides/c-extension-for-python":
-    - "@javabster"
     - "@abbycross"
     - "@beckykd"
     - "@cryoris"
@@ -79,7 +78,6 @@ notifications:
   "docs/guides/debugging-tools":
     - "`@kevinsung`"
     - "@abbycross"
-    - "@javabster"
   "docs/guides/defaults-and-configuration-options":
     - "`@nbronn`"
     - "@beckykd"
@@ -107,7 +105,6 @@ notifications:
     - "@jyu00"
     - "@beckykd"
   "docs/guides/execute-on-hardware":
-    - "@javabster"
     - "@abbycross"
     - "`@lerongil`"
   "docs/guides/fair-share-scheduler":
@@ -126,20 +123,21 @@ notifications:
     - "@ElePT"
     - "@jyu00"
   "docs/tutorials/hello-world":
-    - "@javabster"
+    - "@abbycross"
+    - "@beckykd"
+  "docs/guides/ha-dr":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/index":
-    - "@javabster"
     - "@abbycross"
   "docs/guides/allocation-limits":
     - "@abbycross"
     - "@beckykd"
   "docs/guides/install-c-api":
-    - "@javabster"
     - "@abbycross"
     - "@beckykd"
     - "@cryoris"
   "docs/guides/install-qiskit":
-    - "@javabster"
     - "@abbycross"
     - "@beckykd"
     - "`@mtreinish`"
@@ -195,7 +193,6 @@ notifications:
     - "@abbycross"
     - "@beckykd"
   "docs/guides/map-problem-to-circuits":
-    - "@javabster"
     - "@abbycross"
     - "@beckykd"
   "docs/guides/max-execution-time":
@@ -308,7 +305,6 @@ notifications:
     - "@abbycross"
     - "@beckykd"
     - "`@kevinsung`"
-    - "@javabster"
   "docs/guides/transpile-with-pass-managers":
     - "`@kevinsung`"
     - "`@nbronn`"
@@ -337,7 +333,8 @@ notifications:
   "docs/guides/DAG-representation":
     - "@kaelynj"
   "docs/migration-guides/index":
-    - "@javabster"
+    - "@beckykd"
+    - "@abbycross"
   "docs/migration-guides/metapackage-migration":
     - "@kaelynj"
   "docs/migration-guides/qiskit-algorithms-module":
