Revised the toc, index, and qiskit_bot, and remove survey link and trademark symbol
Added the corresponding adjustments for creating a new tutorial.

Note that we still need to adjust the json and metadata of the tutorial, which would be done in the PR.

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -668,6 +668,10 @@ notifications:
     - "@miamico"
     - "@jenglick"
     - "@annaliese-estes"
+  "docs/tutorials/compilation-methods-for-hamiltonian-simulation-circuits":
+    - "@henryzou50"
+    - "@miamico"
+    - "@annaliese-estes"
   "learning/courses/quantum-computing-in-practice/introduction":
     - "@livlanes"
   "learning/courses/quantum-computing-in-practice/running-quantum-circuits":
