--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -522,6 +522,15 @@ notifications:
     - "@kaelynj"
   "docs/guides/function-template-chemistry-workflow":
     - "@kaelynj"
+  "docs/support/execution-modes-faq":
+    - "@beckykd"
+    - "@abbycross"
+  "docs/support/faq":
+    - "@beckykd"
+    - "@abbycross" 
+  "docs/support/index":
+    - "@beckykd"
+    - "@abbycross" 
   "docs/tutorials/index":
     - "@miamico"
     - "@annaliese-estes"
