--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -122,6 +122,10 @@ notifications:
   "docs/guides/get-started-with-primitives":
     - "@ElePT"
     - "@jyu00"
+  "docs/security/ha-dr":
+    - "@abbycross"
+    - "@beckykd"
+
   "docs/tutorials/hello-world":
     - "@abbycross"
     - "@beckykd"
