Add bot owners to new GA pages (#3558)
Closes #3557 

@beckykd and @abbycross I looked through the commit history for some of
these and put you both as owners on files that made sense to me. Would
you mind checking to make sure the files I've added ya'll to make sense?

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -9,6 +9,29 @@ notification_prelude: |
 # we still want their name in the Qiskit Bot message so people know they are
 # relevant.
 notifications:
+  "docs/accessibility":
+    - "@beckykd"
+  "docs/faq":
+    - "@abbycross"
+    - "@beckykd"
+  "docs/responsible-quantum-computing":
+    - "@abbycross"
+  "docs/security/index":
+    - "@abbycross"
+  "docs/security/virtual-private-endpoints":
+    - "@abbycross"
+  "docs/support":
+    - "@abbycross"
+    - "@beckykd"
+  "docs/open-source/code-of-conduct":
+    - "@abbycross"
+  "docs/open-source/create-a-provider":
+    - "@kaelynj"
+  "docs/open-source/index":
+    - "@abbycross"
+  "docs/open-source/qiskit-sdk-version-strategy":
+    - "@abbycross"
+    - "@kaelynj"
   "docs/guides/access-groups":
     - "@abbycross"
     - "@beckykd"
@@ -48,7 +71,6 @@ notifications:
   "docs/guides/cloud-setup-rest-api":
     - "@beckykd"
     - "@abbycross"
-
   "docs/guides/common-parameters":
     - "`@nbronn`"
     - "@beckykd"
