--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -20,6 +20,9 @@ notifications:
     - "@abbycross"
   "docs/security/virtual-private-endpoints":
     - "@abbycross"
+  "docs/security/secure-data":
+    - "@abbycross"
+    - "beckykd"
   "docs/support":
     - "@abbycross"
     - "@beckykd"
