Bring over new design for Support pg (#3549)
- [x] integrate new design from figma
- [x] create Support directory
- [x] separate out FAQs
- [x] waiting on link for Qiskit Slack community

Will also need redirects for 

docs/guides/execution-mode-faq to docs/support/faq
docs/faq to docs/support/faq
will docs/support still go to the right place since it will now be
docs/support/index?

---------

Co-authored-by: Kaelyn Ferris <43348706+kaelynj@users.noreply.github.com>
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -11,18 +11,12 @@ notification_prelude: |
 notifications:
   "docs/accessibility":
     - "@beckykd"
-  "docs/faq":
-    - "@abbycross"
-    - "@beckykd"
   "docs/responsible-quantum-computing":
     - "@abbycross"
   "docs/security/index":
     - "@abbycross"
   "docs/security/virtual-private-endpoints":
     - "@abbycross"
-  "docs/support":
-    - "@abbycross"
-    - "@beckykd"
   "docs/open-source/code-of-conduct":
     - "@abbycross"
   "docs/open-source/create-a-provider":
@@ -115,9 +109,6 @@ notifications:
   "docs/guides/error-mitigation-and-suppression-techniques":
     - "`@kevinsung`"
   "docs/guides/estimate-job-run-time":
-    - "@jyu00"
-    - "@beckykd"
-  "docs/guides/execution-modes-faq":
     - "@jyu00"
     - "@beckykd"
   "docs/guides/execution-modes":
@@ -545,6 +536,15 @@ notifications:
     - "@kaelynj"
   "docs/guides/function-template-chemistry-workflow":
     - "@kaelynj"
+  "docs/support/execution-modes-faq":
+    - "@beckykd"
+    - "@abbycross"
+  "docs/support/faq":
+    - "@beckykd"
+    - "@abbycross"
+  "docs/support/index":
+    - "@beckykd"
+    - "@abbycross"
   "docs/tutorials/index":
     - "@miamico"
     - "@annaliese-estes"
