Set up responsibilities files

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -138,7 +138,9 @@ notifications:
   "docs/security/ha-dr":
     - "@abbycross"
     - "@beckykd"
-
+  "docs/security/responsibilities":
+    - "@abbycross"
+    - "@beckykd"
   "docs/tutorials/hello-world":
     - "@abbycross"
     - "@beckykd"
