Remove notebook from fortnightly tests

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -90,7 +90,6 @@ notebooks = [
     "docs/guides/multiverse-computing-singularity.ipynb",
     "docs/guides/qunova-chemistry.ipynb",
     "docs/guides/ai-transpiler-passes.ipynb",
-    "docs/guides/qiskit-transpiler-service.ipynb",
     "docs/guides/primitives.ipynb",
     "docs/guides/run-jobs-batch.ipynb",
     "docs/guides/run-jobs-session.ipynb",
@@ -159,7 +158,8 @@ notebooks = [
     "docs/guides/estimate-job-run-time.ipynb",
     "docs/guides/serverless-port-code.ipynb",
 
-
+    # This is temporarily broken while the transpiler service migrates to cloud
+    "docs/guides/qiskit-transpiler-service.ipynb",
 
     # We never run tutorials notebooks
     "docs/tutorials/multi-product-formula.ipynb",
