Responsibilities for GA (#3571)
Part of #3525.

Need to find a way to indicate differences among plans - possibly with
flair tags. See box note.

---------

Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -141,7 +141,9 @@ notifications:
   "docs/security/ha-dr":
     - "@abbycross"
     - "@beckykd"
-
+  "docs/security/responsibilities":
+    - "@abbycross"
+    - "@beckykd"
   "docs/tutorials/hello-world":
     - "@abbycross"
     - "@beckykd"
