--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "is-absolute-url": "^4.0.1",
     "js-yaml": "^4.1.0",
     "lodash-es": "^4.17.21",
-    "markdown-link-extractor": "^3.1.0",
     "mdast": "^3.0.0",
     "mkdirp": "^3.0.1",
     "p-map": "^6.0.0",
     "rehype-parse": "^8.0.0",
     "rehype-remark": "^9.1.2",
+    "remark-frontmatter": "^5.0.0",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "remark-mdx": "^2.3.0",
