--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -17,6 +17,9 @@ notifications:
     - "@abbycross"
   "docs/security/virtual-private-endpoints":
     - "@abbycross"
+  "docs/security/secure-data":
+    - "@abbycross"
+    - "beckykd"
   "docs/open-source/code-of-conduct":
     - "@abbycross"
   "docs/open-source/create-a-provider":
