--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -31,6 +31,7 @@ notebooks = [
     "docs/guides/qiskit-addons-mpf.ipynb",
     "docs/guides/represent-quantum-computers.ipynb",
     "docs/guides/save-circuits.ipynb",
+    "docs/guides/save-jobs.ipynb",
     "docs/guides/set-optimization.ipynb",
     "docs/guides/simulate-stabilizer-circuits.ipynb",
     "docs/guides/simulate-with-qiskit-aer.ipynb",
