--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -192,6 +192,7 @@ notebooks = [
     "docs/tutorials/nishimori-phase-transition.ipynb",
     "docs/tutorials/global-data-quantum-optimizer.ipynb",
     "docs/tutorials/colibritd-pde.ipynb",
+    "docs/tutorials/compilation-methods-for-hamiltonian-simulation-circuits.ipynb",
 
     # Don't test any learning notebooks
     "learning/courses/quantum-computing-in-practice/introduction.ipynb",
