--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -161,6 +161,7 @@ notebooks = [
     "docs/guides/qiskit-transpiler-service.ipynb",
 
     # We never run tutorials notebooks
+    "docs/tutorials/shors-algorithm.ipynb",
     "docs/tutorials/multi-product-formula.ipynb",
     "docs/tutorials/advanced-techniques-for-qaoa.ipynb",
     "docs/tutorials/ai-transpiler-introduction.ipynb",
