--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -643,6 +643,9 @@ notifications:
   "docs/tutorials/real-time-benchmarking-for-qubit-selection":
     - "@miamico"
     - "@annaliese-estes"
+  "docs/tutorials/shors-algorithm":
+    - "@miamico"
+    - "@annaliese-estes"
   "docs/tutorials/periodic-boundary-conditions-with-circuit-cutting":
     - "@miamico"
     - "@ritajitmajumdar1"
