--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
 
       - name: File metadata
         run: npm run check:metadata
-      - name: Check images
-        run: npm run check:images
+      - name: Check markdown
+        run: npm run check:markdown
       - name: Spellcheck
         run: npm run check:spelling
       - name: Check Qiskit bot config
