--- a/.github/workflows/api-checks.yml
+++ b/.github/workflows/api-checks.yml
@@ -44,5 +44,5 @@ jobs:
         run: npm run check:orphan-pages -- --apis
       - name: Check metadata
         run: npm run check:metadata -- --apis
-      - name: Check images
-        run: npm run check:images -- --apis
+      - name: Check markdown
+        run: npm run check:markdown -- --apis
