--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "playwright test",
     "typecheck": "tsc",
     "check": "npm run check:patterns-index && npm run check:qiskit-bot && npm run check:metadata && npm run check:images && npm run check:orphan-pages && npm run check:spelling && npm run check:internal-links",
-    "check:images": "tsx scripts/js/commands/checkMarkdown.ts",
+    "check:markdown": "tsx scripts/js/commands/checkMarkdown.ts",
     "check:metadata": "tsx scripts/js/commands/checkMetadata.ts",
     "check:spelling": "tsx scripts/js/commands/checkSpelling.ts",
     "check:fmt": "prettier --check .",
@@ -57,7 +57,7 @@
     "remark-mdx": "^2.3.0",
     "remark-parse": "^10.0.1",
     "remark-stringify": "^10.0.3",
-    "transform-markdown-links": "^2.1.0",
+    "transform-images-links": "^2.1.0",
     "unified": "^10.0.0",
     "unist-util-visit": "^4.0.0",
     "yargs": "^17.7.2",
