corrected packagejson file

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "remark-mdx": "^2.3.0",
     "remark-parse": "^10.0.1",
     "remark-stringify": "^10.0.3",
-    "transform-images-links": "^2.1.0",
+    "transform-markdown-links": "^2.1.0",
     "unified": "^10.0.0",
     "unist-util-visit": "^4.0.0",
     "yargs": "^17.7.2",
