fraction_gates tutorial (#3677)
Tutorial authored by Takashi Imamichi showing how to implement
fractional gates capabilities in whole workflow.

Also closes #3685

---------

Co-authored-by: ABBY CROSS <across@us.ibm.com>

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -620,6 +620,11 @@ notifications:
     - "@miamico"
     - "@henryzou50"
     - "@annaliese-estes"
+  "docs/tutorials/fractional-gates":
+    - "@t-imamichi"
+    - "@nathanearnestnoble"
+    - "@miamico"
+    - "@annaliese-estes"
   "docs/tutorials/wire-cutting":
     - "@miamico"
     - "@ritajitmajumdar1"
