adding new qcip ep6 text for review

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -200,6 +200,7 @@ notebooks = [
     "learning/courses/quantum-computing-in-practice/mapping.ipynb",
     "learning/courses/quantum-computing-in-practice/applications-of-qc.ipynb",
     "learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb",
+    "learning/courses/quantum-computing-in-practice/simulating-nature.ipynb",
     "learning/courses/quantum-diagonalization-algorithms/sqd-overview.ipynb",
     "learning/courses/quantum-diagonalization-algorithms/skqd.ipynb",
     "learning/courses/quantum-diagonalization-algorithms/krylov.ipynb",
