add to toc, index, qiskit_bot

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -13,6 +13,8 @@ notifications:
     - "@beckykd"
   "docs/responsible-quantum-computing":
     - "@abbycross"
+  "docs/security/observability":
+    - "@abbycross"
   "docs/security/index":
     - "@abbycross"
   "docs/security/virtual-private-endpoints":
