Update who gets notified by github actions

--- a/.github/workflows/notebook-test-cron.yml
+++ b/.github/workflows/notebook-test-cron.yml
@@ -64,7 +64,7 @@ jobs:
             This PR updates all notebooks that ran successfully with the new cell outputs.
             > [!NOTE]
             > This pull request was created by a GitHub action." \
-           --reviewer frankharkins
+           --reviewer kaelynj
 
       - name: Upload executed notebooks
         if: "!cancelled()"
