--- a/.github/workflows/dev-docs-sync.yml
+++ b/.github/workflows/dev-docs-sync.yml
@@ -68,5 +68,5 @@ jobs:
             This PR updates all dev APIs that changed.
             > [!NOTE]
             > This pull request was created by a GitHub action." \
-           --reviewer frankharkins \
+           --reviewer arnaucasau \
            --reviewer Eric-Arellano
