vqe in class module
Added VQE in class module under module/computer science

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -269,6 +269,7 @@ notebooks = [
     "learning/courses/quantum-business-foundations/quantum-computing-fundamentals.ipynb",
     "learning/modules/computer-science/deutsch-jozsa.ipynb",
     "learning/modules/computer-science/quantum-key-distribution.ipynb",
+    "learning/modules/computer-science/vqe.ipynb",
     "learning/modules/computer-science/quantum-teleportation.ipynb",
     "learning/modules/quantum-mechanics/superposition-with-qiskit.ipynb",
     "learning/modules/quantum-mechanics/stern-gerlach-measurements-with-qiskit.ipynb",
