lower case title and updated toml file

--- a/scripts/config/notebook-testing.toml
+++ b/scripts/config/notebook-testing.toml
@@ -268,6 +268,7 @@ notebooks = [
     "learning/courses/quantum-business-foundations/how-to-become-quantum-ready.ipynb",
     "learning/courses/quantum-business-foundations/quantum-computing-fundamentals.ipynb",
     "learning/modules/computer-science/deutsch-jozsa.ipynb",
+    "learning/modules/computer-science/vqe.ipynb",
     "learning/modules/computer-science/quantum-key-distribution.ipynb",
     "learning/modules/computer-science/vqe.ipynb",
     "learning/modules/computer-science/quantum-teleportation.ipynb",
