update the fiddly things

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -140,6 +140,10 @@ notifications:
   "docs/security/ha-dr":
     - "@abbycross"
     - "@beckykd"
+  "docs/security/observability":
+    - "@GantaRoja"
+    - "@abbycross"
+    - "@beckykd"
   "docs/security/responsibilities":
     - "@abbycross"
     - "@beckykd"
