--- a/.github/workflows/observability-sync.yml
+++ b/.github/workflows/observability-sync.yml
@@ -14,7 +14,7 @@ name: Generate Observability Docs
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 1 * * 1,3,5" # At 01:00 on Monday, Wednesday, and Friday.
+    - cron: "0 1 * * 1,2,3,4,5" # At 01:00 on Monday-Friday.
 
 jobs:
   sync:
@@ -28,10 +28,7 @@ jobs:
           node-version: 18
       - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y imagemagick
-          sudo ln -s /usr/bin/convert /usr/bin/magick
-          npm ci
+          run: npm ci
 
       - name: Run observability script
         run: npx tsx scripts/js/commands/generateObservabilityPage.ts
@@ -40,10 +37,7 @@ jobs:
 
       - name: Get all changed docs files
         id: changed-docs-files
-        # Note: we specifically check for changed docs files rather than changed
-        # images in public/images or changes to scripts/config/api-html-artifacts.json
-        # to avoid noisy PRs. It's common for images to change because some of the
-        # images are generated non-deterministically.
+
         run: |
           echo "CHANGED_FILES<<EOF" >> $GITHUB_OUTPUT
           git diff --name-only docs >> $GITHUB_OUTPUT
@@ -51,21 +45,19 @@ jobs:
 
       - name: Make pull request
         if: steps.changed-docs-files.outputs.CHANGED_FILES
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
         run: |
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git config user.name "github-actions[bot]"
           git switch -c actions/cron-${{ github.run_id }}
           git add .
-          git commit -m "Sync latest dev docs"
+          git commit -m "Update observability page"
           git push origin actions/cron-${{ github.run_id }}
           gh pr create \
            -B main \
            -H actions/cron-${{ github.run_id }} \
-           --title "Update API dev docs" \
-           --body "An action recently synced the latest dev docs. \
-            This PR updates all dev APIs that changed.
+           --title "Update observability page" \
+           --body "An action recently updated the observability page. \
             > [!NOTE]
             > This pull request was created by a GitHub action." \
            --reviewer arnaucasau \
