add to toc, qiskit_bot, ignorelist for patterns index

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -171,6 +171,9 @@ notifications:
     - "`@lerongil`"
     - "@jyu00"
     - "@beckykd"
+  "docs/guides/access-instances-platform-apis":
+    - "@abbycross"
+    - "@beckykd"
   "docs/guides/interoperate-qiskit-qasm2":
     - "`@jakelishman`"
     - "@taalexander"
