Set up context-based restrictions file

--- a/qiskit_bot.yaml
+++ b/qiskit_bot.yaml
@@ -19,6 +19,9 @@ notifications:
     - "@abbycross"
   "docs/security/secure-data":
     - "@abbycross"
+    - "beckykd"  
+  "docs/security/context-based-restrictions":
+    - "@abbycross"
     - "beckykd"
   "docs/open-source/code-of-conduct":
     - "@abbycross"
